# TCPServer

./: .gitignore  CMakeLists.txt  README.md  WIP.md  game.db  notes.md  threats.md  users.txt
clients/: client.cpp  good_client.cpp  malicious_client.cpp
src/: auth.cpp  auth.h  database.cpp  database.h  game.cpp  game.h  logger.cpp  logger.h  main.cpp  network.cpp  network.h  protocol.cpp  protocol.h
